--- a/gallery.html
+++ b/gallery.html
@@ -7,6 +7,8 @@
 <body>
 
 <h2>This is Gallery Page</h2>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias atque, commodi consequuntur dolore doloremque doloribus eaque eos id molestiae mollitia, nesciunt nisi nobis officia, quis sapiente
+    soluta tempora unde velit?</p>
 
 
 </body>
